--- a/experiments/0001.toml
+++ b/experiments/0001.toml
@@ -1,20 +1,15 @@
 # CLIP from OpenAI Github repository, ResNet vision model.
+dataset.name    = 'MSCOCO'
+models.name     = ['OpenAICLIP']
+topk            = [1, 5, 10]
+seed            = 123456789
+logging_level   = 'INFO'
+device          = 'cpu'
 
-type = 'evaluate'
-dataset = 'MSCOCO'
-big_model = 'CLIP'
-small_model = 'CLIPOpenAI'
-top_k_small_preds_refine = 20
-which_top_k_accs = [1, 5, 10]
-seed = 123456789
-logging_level = 'INFO'
-eval_only_small_model = true
+[dataset.kwargs]
+n_samples = 20
+layout    = 'caption'
 
-[dataset_args]
-n_samples = 50
-
-[big_model_args]
-size = 'big'
-
-[small_model_args]
-model_str = "RN50x64" # "ViT-B/32"
+[models.0.kwargs]
+# model_str = "RN50x64" # "ViT-B/32"
+model_str = "ViT-B/32"
