--- a/experiments/huggingface_clip.toml
+++ b/experiments/huggingface_clip.toml
@@ -1,15 +1,17 @@
-# OpenAICLIp
+# HuggingFaceCLIP
 dataset.name    = 'MSCOCO'
-models.name     = ['OpenAICLIP']
+models.name     = ['HuggingFaceCLIP']
 topk            = [1, 5, 10]
 seed            = 123456789
 logging_level   = 'INFO'
 device          = 'cpu'
 query_rate      = 0.1
+batch_size      = 4
 
 [dataset.kwargs]
-layout    = 'image-caption[0]'
+n_samples       = 500
+layout          = 'image-caption[0]'
 
 [models.0.kwargs]
-model_str = "ViT-B/32"
+model_str = "openai/clip-vit-base-patch32"
 
