--- a/experiments/0004.toml
+++ b/experiments/0004.toml
@@ -1,7 +1,7 @@
 # Small and big CLIP from huggingface
 dataset.name    = 'MSCOCO'
-models.name     = ['HuggingFacePrunedCLIP','HuggingFaceCLIP']
-topm            = [50]
+models.name     = ['HuggingFaceCLIP']#['HuggingFacePrunedCLIP','HuggingFaceCLIP']
+#topm            = [50]
 topk            = [1, 5, 10]
 seed            = 123456789
 logging_level   = 'INFO'
@@ -11,9 +11,9 @@ device          = 'cpu'
 n_samples = 1000
 layout    = 'caption'
 
-[models.1.kwargs]
+[models.0.kwargs]
 model_str = 'openai/clip-vit-large-patch14'
 
-[models.0.kwargs]
-model_str = 'openai/clip-vit-base-patch32'
-pruning_version = 'vitB32_pruned_0.75_751.pt'
+#[models.0.kwargs]
+#model_str = 'openai/clip-vit-base-patch32'
+#pruning_version = 'vitB32_pruned_0.75_751.pt'
