Readme and merge

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,10 @@ test*
 .transformer
 .ckpt
 models/huggingface_pruned_clip/pruned_models
+pruning_machanism/__pycache__
+pruning_machanism/fisher_pruning/dataset/val2017/*
+pruning_machanism/fisher_pruning/dataset/annotations_trainval2017/*
+pruning_machanism/fisher_pruning/dataset/__pycache__/
+pruning_machanism/pruned_models/*
+pruning_machanism/.dataset
+pruning_machanism/.transformer
