--- a/experiments/2lvl_flip_topk.toml
+++ b/experiments/2lvl_flip_topk.toml
@@ -1,22 +1,24 @@
-#[OpenAIFLIP, OpenAICLIP]
 dataset.name    = 'MSCOCO'
 models.name     = ['OpenAIFLIP', 'OpenAICLIP']
+base_model.name = ['OpenAICLIP']
 topk            = [1, 5, 10]
-topm            = [35]
+topm            = [50]
 seed            = 123456789
 logging_level   = 'INFO'
 device          = 'cpu'
-f      = 0.01
-batch_size      = 8
+batch_size      = 32
 cache_type      = "dense"
+experiment      = "topk"
 
 [dataset.kwargs]
-n_samples       = 1000
-layout    = 'image-caption[0]'
+layout    = 'caption'
 
 [models.0.kwargs]
 p         = 0.5
 model_str = "ViT-B/32"
 
 [models.1.kwargs]
+model_str = "ViT-B/32"
+
+[base_model.0.kwargs]
 model_str = "ViT-B/32"
