--- a/experiments/2lvl_flip_topk_2x.toml
+++ b/experiments/2lvl_flip_topk_2x.toml
@@ -1,6 +1,5 @@
 dataset.name    = 'MSCOCO'
-models.name     = ['OpenAIFLIP', 'OpenAICLIP']
-base_model.name = ['OpenAICLIP']
+models.name     = ['HuggingFaceFLIP', 'HuggingFaceCLIP']
 topk            = [1, 5, 10]
 topm            = [50]
 seed            = 123456789
@@ -11,14 +10,11 @@ cache_type      = "dense"
 experiment      = "topk"
 
 [dataset.kwargs]
-layout    = 'caption'
+layout    = 'image-caption[0]'
 
 [models.0.kwargs]
 p         = 0.5
-model_str = "ViT-B/32"
+model_str = "openai/clip-vit-base-patch16"
 
 [models.1.kwargs]
-model_str = "ViT-B/32"
-
-[base_model.0.kwargs]
-model_str = "ViT-B/32"
+model_str = "openai/clip-vit-base-patch16"
