--- a/experiments/2lvl_flip_topk_3x.toml
+++ b/experiments/2lvl_flip_topk_3x.toml
@@ -1,5 +1,5 @@
 dataset.name    = 'MSCOCO'
-models.name     = ['OpenAICLIP']
+models.name     = ['HuggingFaceFLIP', 'HuggingFaceCLIP']
 topk            = [1, 5, 10]
 topm            = [50]
 seed            = 123456789
@@ -10,7 +10,11 @@ cache_type      = "dense"
 experiment      = "topk"
 
 [dataset.kwargs]
-layout    = 'caption'
+layout    = 'image-caption[0]'
 
 [models.0.kwargs]
-model_str = "ViT-B/32"
+p         = 0.74
+model_str = "openai/clip-vit-base-patch16"
+
+[models.1.kwargs]
+model_str = "openai/clip-vit-base-patch16"
