--- a/experiments/2lvl_flip_speedup.toml
+++ b/experiments/2lvl_flip_speedup.toml
@@ -1,20 +1,22 @@
+# 2 level cascade
 dataset.name    = 'MSCOCO'
-models.name     = ['OpenAICLIP', 'OpenAICLIP']
+models.name     = ['OpenAIFLIP', 'OpenAICLIP']
 base_model.name = ['OpenAICLIP']
-topk            = [1, 5, 10]
-topm            = [50]
 seed            = 123456789
 logging_level   = 'INFO'
 device          = 'cpu'
 batch_size      = 32
-cache_type      = "dense"
-experiment      = "topk"
+experiment      = "speedup"
+n_reps          = 1
+f               = 0.1
 
 [dataset.kwargs]
+n_samples       = 1024  # only need sufficiently many samples to get accurate timing
 layout    = 'caption'
 
 [models.0.kwargs]
-model_str = "ViT-B/16"
+p         = 0.5
+model_str = "ViT-B/32"
 
 [models.1.kwargs]
 model_str = "ViT-B/32"
