--- a/experiments/2lvl_noscacade_topk.toml
+++ b/experiments/2lvl_noscacade_topk.toml
@@ -1,5 +1,5 @@
 dataset.name    = 'MSCOCO'
-models.name     = ['HuggingFaceFLIP', 'HuggingFaceCLIP']
+models.name     = ['OpenAICLIP']
 topk            = [1, 5, 10]
 topm            = [50]
 seed            = 123456789
@@ -10,11 +10,7 @@ cache_type      = "dense"
 experiment      = "topk"
 
 [dataset.kwargs]
-layout    = 'image-caption[0]'
+layout    = 'caption'
 
 [models.0.kwargs]
-p         = 0.5
-model_str = "openai/clip-vit-base-patch16"
-
-[models.1.kwargs]
-model_str = "openai/clip-vit-base-patch16"
+model_str = "ViT-B/32"
