--- a/experiments/cas[flip-clip].toml
+++ b/experiments/cas[flip-clip].toml
@@ -1,22 +1,22 @@
 #[OpenAIFLIP, OpenAICLIP]
 dataset.name    = 'MSCOCO'
-models.name     = ['OpenAIFLIP', 'OpenAICLIP']
+models.name     = ['HuggingFaceFLIP', 'HuggingFaceCLIP']
 topk            = [1, 5, 10]
-topm            = [35]
+topm            = [50]
 seed            = 123456789
 logging_level   = 'INFO'
 device          = 'cpu'
 f      = 0.01
 batch_size      = 8
-cache_type      = "dense"
+cache_type      = "sparse"
 
 [dataset.kwargs]
-n_samples       = 1000
+n_samples       = 500
 layout    = 'image-caption[0]'
 
 [models.0.kwargs]
 p         = 0.5
-model_str = "ViT-B/32"
+model_str = "openai/clip-vit-base-patch32"
 
 [models.1.kwargs]
-model_str = "ViT-B/32"
+model_str = "openai/clip-vit-base-patch32"
