Measure per-query time, add 3-level experiments.

--- a/experiments/2lvl_flip_speedup.toml
+++ b/experiments/2lvl_flip_speedup.toml
@@ -2,6 +2,7 @@
 dataset.name    = 'MSCOCO'
 models.name     = ['OpenAIFLIP', 'OpenAICLIP']
 base_model.name = ['OpenAICLIP']
+base_model.topm = []
 seed            = 123456789
 logging_level   = 'INFO'
 device          = 'cpu'
