--- a/experiments/2lvl_retraining_speedup.toml
+++ b/experiments/2lvl_retraining_speedup.toml
@@ -1,6 +1,7 @@
 dataset.name    = 'MSCOCO'
 models.name     = ['OpenAICLIP', 'OpenAICLIP']
 base_model.name = ['OpenAICLIP']
+base_model.topm = []
 seed            = 123456789
 logging_level   = 'INFO'
 device          = 'cpu'
