--- a/experiments/3lvl_flip_speedup_2x.toml
+++ b/experiments/3lvl_flip_speedup_2x.toml
@@ -1,8 +1,9 @@
 # 2 level cascade
 dataset.name    = 'MSCOCO'
-models.name     = ['HuggingFaceFLIP', 'HuggingFaceFLIP']
-base_model.name = ['HuggingFaceCLIP']
-base_model.topm = []
+models.name     = ['HuggingFaceFLIP', 'HuggingFaceFLIP', 'HuggingFaceFLIP']
+base_model.name = ['HuggingFaceFLIP', 'HuggingFaceFLIP']
+topm = [50, 25]
+base_model.topm = [50]
 seed            = 123456789
 logging_level   = 'INFO'
 device          = 'cpu'
@@ -21,8 +22,17 @@ p         = 0.5
 model_str = "openai/clip-vit-base-patch16"
 
 [models.1.kwargs]
-p         = 0.5
+p         = 0.75
+model_str = "openai/clip-vit-base-patch16"
+
+[models.2.kwargs]
+p         = 0.75
 model_str = "openai/clip-vit-base-patch16"
 
 [base_model.0.kwargs]
+p         = 0.5
+model_str = "openai/clip-vit-base-patch16"
+
+[base_model.1.kwargs]
+p         = 0.5
 model_str = "openai/clip-vit-base-patch16"
