--- a/experiments/cas[flip-clip].toml
+++ b/experiments/cas[flip-clip].toml
@@ -5,9 +5,9 @@ topk            = [1, 5, 10]
 topm            = [50]
 seed            = 123456789
 logging_level   = 'INFO'
-device          = 'cpu'
+device          = 'cuda:0'
 f      = 0.01
-batch_size      = 8
+batch_size      = 2
 cache_type      = "sparse"
 
 [dataset.kwargs]
