--- a/experiments/2lvl_flip_speedup.toml
+++ b/experiments/2lvl_flip_speedup.toml
@@ -3,6 +3,7 @@ dataset.name    = 'MSCOCO'
 models.name     = ['OpenAIFLIP', 'OpenAICLIP']
 base_model.name = ['OpenAICLIP']
 base_model.topm = []
+topm = [50]
 seed            = 123456789
 logging_level   = 'INFO'
 device          = 'cpu'
