--- a/experiments/2lvl_retraining_speedup.toml
+++ b/experiments/2lvl_retraining_speedup.toml
@@ -1,6 +1,6 @@
 dataset.name    = 'MSCOCO'
-models.name     = ['OpenAICLIP', 'OpenAICLIP']
-base_model.name = ['OpenAICLIP']
+models.name     = ['HuggingFaceCLIP', 'HuggingFaceCLIP']
+base_model.name = ['HuggingFaceCLIP']
 base_model.topm = []
 topm = [50]
 seed            = 123456789
@@ -8,18 +8,19 @@ logging_level   = 'INFO'
 device          = 'cpu'
 batch_size      = 32
 experiment      = "speedup"
+do_warmup_rep   = true
 n_reps          = 3
 f               = 0.1
 
 [dataset.kwargs]
-n_samples       = 1024  # only need sufficiently many samples to get accurate timing
-layout    = 'caption'
+n_samples       = 128  # only need sufficiently many samples to get accurate timing
+layout    = 'image-caption[0]'
 
 [models.0.kwargs]
-model_str = "ViT-B/16"
+model_str = "openai/clip-vit-base-patch32"
 
 [models.1.kwargs]
-model_str = "ViT-B/32"
+model_str = "openai/clip-vit-base-patch16"
 
 [base_model.0.kwargs]
-model_str = "ViT-B/32"
+model_str = "openai/clip-vit-base-patch16"
