Add Flickr30k experiments for masking, retraining, nocascade.

--- a/experiments/2lvl_masking_topk_2x.toml
+++ b/experiments/2lvl_masking_topk_2x.toml
@@ -10,6 +10,7 @@ cache_type      = "dense"
 experiment      = "topk"
 
 [dataset.kwargs]
+n_samples = 60
 layout    = 'image-caption[0]'
 
 [models.0.kwargs]
