--- a/experiments/2lvl_masking_topk_3x_flickr30k.toml
+++ b/experiments/2lvl_masking_topk_3x_flickr30k.toml
@@ -4,7 +4,7 @@ topk            = [1, 5, 10]
 topm            = [50]
 seed            = 123456789
 logging_level   = 'INFO'
-device          = 'cpu'
+device          = 'cuda:0'
 batch_size      = 32
 cache_type      = "dense"
 experiment      = "topk"
