--- a/experiments/2lvl_nocascade_topk.toml
+++ b/experiments/2lvl_nocascade_topk.toml
@@ -1,5 +1,5 @@
 dataset.name    = 'MSCOCO'
-models.name     = ['HuggingFaceCLIP'']
+models.name     = ['HuggingFaceCLIP']
 topk            = [1, 5, 10]
 topm            = [50]
 seed            = 123456789
