--- a/experiments/2lvl_nocascade_topk_flickr30k.toml
+++ b/experiments/2lvl_nocascade_topk_flickr30k.toml
@@ -1,7 +1,7 @@
 dataset.name    = 'Flickr30'
 models.name     = ['HuggingFaceCLIP']
 topk            = [1, 5, 10]
-topm            = [50]
+topm            = []
 seed            = 123456789
 logging_level   = 'INFO'
 device          = 'cuda:0'
