--- a/experiments/2lvl_distill_topk.toml
+++ b/experiments/2lvl_distill_topk.toml
@@ -1,11 +1,10 @@
-dataset.name    = 'Flickr30'
-models.name     = ['HuggingFaceFLIP', 'HuggingFaceCLIP']
+dataset.name    = 'MSCOCO'
+models.name     = ['HuggingFaceDistillCLIP', 'HuggingFaceCLIP']
 topk            = [1, 5, 10]
 topm            = [50]
 seed            = 123456789
 logging_level   = 'INFO'
-device          = 'cuda:0'
-batch_size      = 32
+device          = 'cpu'
 cache_type      = "dense"
 experiment      = "topk"
 
@@ -13,8 +12,9 @@ experiment      = "topk"
 layout    = 'image-caption[0]'
 
 [models.0.kwargs]
-p         = 0.74
 model_str = "openai/clip-vit-base-patch16"
+epoch     = 3
+lr        = 1e-3
 
 [models.1.kwargs]
 model_str = "openai/clip-vit-base-patch16"
