--- a/experiments/2lvl_flip_speedup_3x.toml
+++ b/experiments/2lvl_flip_speedup_3x.toml
@@ -1,9 +1,8 @@
 # 2 level cascade
-dataset.name    = 'Flickr30'
+dataset.name    = 'MSCOCO'
 models.name     = ['HuggingFaceFLIP', 'HuggingFaceFLIP']
 base_model.name = ['HuggingFaceCLIP']
 base_model.topm = []
-topm = [50]
 seed            = 123456789
 logging_level   = 'INFO'
 device          = 'cpu'
