--- a/experiments/2lvl_retraining_topk.toml
+++ b/experiments/2lvl_retraining_topk.toml
@@ -1,19 +1,19 @@
 dataset.name    = 'MSCOCO'
-models.name     = ['HuggingFaceCLIP', 'HuggingFaceCLIP']
+models.name     = ['OpenAICLIP', 'OpenAICLIP']
 topk            = [1, 5, 10]
 topm            = [50]
 seed            = 123456789
 logging_level   = 'INFO'
-device          = 'cuda:0'
+device          = 'cpu'
 batch_size      = 32
 cache_type      = "dense"
 experiment      = "topk"
 
 [dataset.kwargs]
-layout    = 'image-caption[0]'
+layout    = 'caption'
 
 [models.0.kwargs]
-model_str = "openai/clip-vit-base-patch32"
+model_str = "ViT-B/16"
 
 [models.1.kwargs]
-model_str = "openai/clip-vit-base-patch16"
+model_str = "ViT-B/32"
