Fixes order of models in sensitivity experiments

--- a/experiments/sensitivity_speedup.toml
+++ b/experiments/sensitivity_speedup.toml
@@ -5,7 +5,7 @@ topk            = [1, 5, 10]
 topm            = [50]
 seed            = 123456789
 logging_level   = 'INFO'
-device          = 'cpu'
+device          = 'cuda:0'
 batch_size      = 32
 cache_type      = "dense"
 experiment      = "speedup"
@@ -18,11 +18,11 @@ n_samples = 128
 layout    = 'image-caption[0]'
 
 [models.0.kwargs]
-model_str = 'openai/clip-vit-base-patch16'
+model_str = 'openai/clip-vit-base-patch32'
 
 [models.1.kwargs]
-model_str = 'openai/clip-vit-base-patch32'
-pruning_version = 'vitB32_pruned_0.65_123.pt'
+model_str = 'openai/clip-vit-base-patch16'
+pruning_version = 'vitB16_pruned_0.4_6.pt'
 
 [base_model.0.kwargs]
-model_str = 'openai/clip-vit-base-patch32'
+model_str = 'openai/clip-vit-base-patch16'
