Adds 132 heads pruned versions to experiments

--- a/experiments/sensitivity_topk_132.toml
+++ b/experiments/sensitivity_topk_132.toml
@@ -8,21 +8,15 @@ logging_level   = 'INFO'
 device          = 'cuda:0'
 batch_size      = 32
 cache_type      = "dense"
-experiment      = "speedup"
-do_warmup_rep   = true
-n_reps          = 10
-f               = 0.1
+experiment      = "topk"
 
 [dataset.kwargs]
-n_samples = 128
 layout    = 'image-caption[0]'
 
 [models.0.kwargs]
 model_str = 'openai/clip-vit-base-patch16'
-pruning_version = 'vitB16_pruned_0.pt'
+pruning_version = 'vitB16_pruned_132.pt'
 
 [models.1.kwargs]
 model_str = 'openai/clip-vit-base-patch16'
 
-[base_model.0.kwargs]
-model_str = 'openai/clip-vit-base-patch16'
