--- a/experiments/sensitivity_topk_132.toml
+++ b/experiments/sensitivity_topk_132.toml
@@ -5,7 +5,7 @@ topk            = [1, 5, 10]
 topm            = [50]
 seed            = 123456789
 logging_level   = 'INFO'
-device          = 'cuda:0'
+device          = 'cpu'
 batch_size      = 32
 cache_type      = "dense"
 experiment      = "topk"
