--- a/experiments/sensitivity_speedup_132.toml
+++ b/experiments/sensitivity_speedup_132.toml
@@ -5,7 +5,7 @@ topk            = [1, 5, 10]
 topm            = [50]
 seed            = 123456789
 logging_level   = 'INFO'
-device          = 'cuda:0'
+device          = 'cpu'
 batch_size      = 32
 cache_type      = "dense"
 experiment      = "speedup"
@@ -19,7 +19,7 @@ layout    = 'image-caption[0]'
 
 [models.0.kwargs]
 model_str = 'openai/clip-vit-base-patch16'
-pruning_version = 'vitB16_pruned_132.pt'
+pruning_version = 'vitB16_pruned_0.4_1234.pt'
 
 [models.1.kwargs]
 model_str = 'openai/clip-vit-base-patch16'
