--- a/experiments/sensitivity_topk_22.toml
+++ b/experiments/sensitivity_topk_22.toml
@@ -5,16 +5,12 @@ topk            = [1, 5, 10]
 topm            = [50]
 seed            = 123456789
 logging_level   = 'INFO'
-device          = 'cuda:0'
+device          = 'cpu'
 batch_size      = 32
 cache_type      = "dense"
-experiment      = "speedup"
-do_warmup_rep   = true
-n_reps          = 3
-f               = 0.1
+experiment      = "topk"
 
 [dataset.kwargs]
-n_samples = 128
 layout    = 'image-caption[0]'
 
 [models.0.kwargs]
@@ -24,5 +20,3 @@ pruning_version = 'vitB16_pruned_77.pt'
 [models.1.kwargs]
 model_str = 'openai/clip-vit-base-patch16'
 
-[base_model.0.kwargs]
-model_str = 'openai/clip-vit-base-patch16'
