--- a/experiments/2lvl_distill_speedup.toml
+++ b/experiments/2lvl_distill_speedup.toml
@@ -18,6 +18,7 @@ layout    = 'image-caption[0]'
 
 [models.0.kwargs]
 model_str = "openai/clip-vit-base-patch16"
+net       = "resnet50"
 
 [models.1.kwargs]
 model_str = "openai/clip-vit-base-patch16"
