--- a/experiments/2lvl_huggingface_retraining_topk.toml
+++ b/experiments/2lvl_huggingface_retraining_topk.toml
@@ -1,22 +1,24 @@
 dataset.name    = 'MSCOCO'
-models.name     = ['HuggingFacePrunedCLIP','HuggingFaceCLIP']
+models.name     = ['HuggingFaceCLIP','HuggingFaceCLIP']
+base_model.name = ['HuggingFaceCLIP']
 topk            = [1, 5, 10]
 topm            = [50]
 seed            = 123456789
 logging_level   = 'INFO'
-device          = 'cuda:0'
+device          = 'cpu'
 batch_size      = 32
 cache_type      = "dense"
 experiment      = "topk"
 
 [dataset.kwargs]
-layout    = 'image-caption[0]'
-
+layout    = 'caption'
 
 [models.0.kwargs]
 model_str = 'openai/clip-vit-base-patch16'
-pruning_version = 'vitB16_pruned_0.25_1234.pt'
 
 [models.1.kwargs]
-model_str = 'openai/clip-vit-base-patch16'
+model_str = 'openai/clip-vit-base-patch32'
+
+[base_model.0.kwargs]
+model_str = 'openai/clip-vit-base-patch32'
 
