Restore correct experiment config files.

--- a/experiments/2lvl_masking_topk_2x.toml
+++ b/experiments/2lvl_masking_topk_2x.toml
@@ -1,5 +1,5 @@
 dataset.name    = 'MSCOCO'
-models.name     = ['HuggingFaceCLIP', 'HuggingFaceCLIP']
+models.name     = ['HuggingFaceFLIP', 'HuggingFaceCLIP']
 topk            = [1, 5, 10]
 topm            = [50]
 seed            = 123456789
@@ -13,7 +13,8 @@ experiment      = "topk"
 layout    = 'image-caption[0]'
 
 [models.0.kwargs]
-model_str = "openai/clip-vit-base-patch32"
+p         = 0.5
+model_str = "openai/clip-vit-base-patch16"
 
 [models.1.kwargs]
 model_str = "openai/clip-vit-base-patch16"
