--- a/experiments/2lvl_masking_speedup_3x_flickr30k.toml
+++ b/experiments/2lvl_masking_speedup_3x_flickr30k.toml
@@ -1,5 +1,6 @@
-dataset.name    = 'MSCOCO'
-models.name     = ['HuggingFaceCLIP', 'HuggingFaceCLIP']
+# 2 level cascade
+dataset.name    = 'Flickr30'
+models.name     = ['HuggingFaceFLIP', 'HuggingFaceFLIP']
 base_model.name = ['HuggingFaceCLIP']
 base_model.topm = []
 topm = [50]
@@ -8,18 +9,20 @@ logging_level   = 'INFO'
 device          = 'cpu'
 batch_size      = 32
 experiment      = "speedup"
-do_warmup_rep   = true
 n_reps          = 3
+do_warmup_rep   = true
 f               = 0.1
 
 [dataset.kwargs]
-n_samples       = 128  # only need sufficiently many samples to get accurate timing
+n_samples       = 128   # only need sufficiently many samples to get accurate timing
 layout    = 'image-caption[0]'
 
 [models.0.kwargs]
-model_str = "openai/clip-vit-base-patch32"
+p         = 0.74
+model_str = "openai/clip-vit-base-patch16"
 
 [models.1.kwargs]
+p         = 0.26
 model_str = "openai/clip-vit-base-patch16"
 
 [base_model.0.kwargs]
