--- a/experiments/2lvl_nocascade_topk.toml
+++ b/experiments/2lvl_nocascade_topk.toml
@@ -1,7 +1,7 @@
 dataset.name    = 'MSCOCO'
-models.name     = ['HuggingFaceCLIP', 'HuggingFaceCLIP']
+models.name     = ['HuggingFaceCLIP']
 topk            = [1, 5, 10]
-topm            = [50]
+topm            = []
 seed            = 123456789
 logging_level   = 'INFO'
 device          = 'cuda:0'
@@ -13,7 +13,4 @@ experiment      = "topk"
 layout    = 'image-caption[0]'
 
 [models.0.kwargs]
-model_str = "openai/clip-vit-base-patch32"
-
-[models.1.kwargs]
 model_str = "openai/clip-vit-base-patch16"
