--- a/experiments/2lvl_retraining_speedup_flickr30k.toml
+++ b/experiments/2lvl_retraining_speedup_flickr30k.toml
@@ -1,4 +1,4 @@
-dataset.name    = 'MSCOCO'
+dataset.name    = 'Flickr30'
 models.name     = ['HuggingFaceCLIP', 'HuggingFaceCLIP']
 base_model.name = ['HuggingFaceCLIP']
 base_model.topm = []
