--- a/experiments/2lvl_fisher_speedup_0.25.toml
+++ b/experiments/2lvl_fisher_speedup_0.25.toml
@@ -19,7 +19,7 @@ layout    = 'image-caption[0]'
 
 [models.0.kwargs]
 model_str = 'openai/clip-vit-base-patch16'
-pruning_version = '<path to your fisher-pruned model with p=0.2>'
+pruning_version = '<path to your fisher-pruned model with p=0.25 (constraint=0.75)>'
 
 [models.1.kwargs]
 model_str = 'openai/clip-vit-base-patch16'
