--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ datasets/flickr30/results.csv
 **.zip
 experiments/*/
 *test.ipynb
-distill*
+distill_cos*
+distill_scr*
 test*
 .log
 .cache
@@ -15,7 +16,10 @@ test*
 .mobilenet
 .dataset
 .transformer
-.ckpt
+*.ckpt
+*.script
+*.err
+*.out
 models/huggingface_pruned_clip/pruned_models
 pruning_machanism/__pycache__
 pruning_machanism/fisher_pruning/dataset/val2017/*
