--- a/experiments/distill.toml
+++ b/experiments/distill.toml
@@ -1,24 +1,22 @@
+#[OpenAIFLIP, OpenAICLIP]
 dataset.name    = 'MSCOCO'
-models.name     = ['HuggingFaceEarlyExitCLIP','HuggingFaceEarlyExitCLIP']
+models.name     = ['HuggingFaceDistillCLIP', 'HuggingFaceCLIP']
 topk            = [1, 5, 10]
 topm            = [50]
 seed            = 123456789
 logging_level   = 'INFO'
-# device          = 'cpu'
-# batch_size      = 8
-device          = "cuda:0"
+device          = 'cuda:0'
 batch_size      = 64
-cache_type      = "dense"
-experiment      = "topk"
+cache_type      = "sparse"
+experiment      = "distill"
 
 [dataset.kwargs]
-# n_samples = 128
 layout    = 'image-caption[0]'
 
 [models.0.kwargs]
 model_str = "openai/clip-vit-base-patch16"
-to_stage = 2
+epoch     = 3
+lr        = 1e-3
 
 [models.1.kwargs]
 model_str = "openai/clip-vit-base-patch16"
-from_stage = 2
